Revert "Update prod (#295)"
This reverts commit d8689dee931c79a740c49eda976aaf4d667ad8bf.
